Mobile: navbar logo overlap fixed

--- a/src/components/Nav/Menu/styles.module.scss
+++ b/src/components/Nav/Menu/styles.module.scss
@@ -7,7 +7,7 @@
 	right: 0;
 	top: 0;
 	transform: translateX(-100%);
-	z-index: 5;
+	z-index: 5 !important;
 }
 
 .overlay {
